gitops/shared_services/pgadmin/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`db.nooblearn2code.com`)
      kind: Rule
      services:
        - name: pgadmin-service
          port: 80
